--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -332,6 +332,11 @@ background-color: #f2f9f9;
 padding: 20px;
 }
 
+/*---- testimonial ----*/
+section.testimonial {
+    padding: 80px 0;
+}
+
 
 /*---- footer section ----*/
 footer {
