--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -337,6 +337,28 @@ section.testimonial {
     padding: 80px 0;
 }
 
+/*---- contact form ----*/
+section.contact {
+    padding: 80px 0;
+}
+.form-wrapper {
+    margin-top: 40px;
+}
+form#contactForm fieldset {
+    border: 0;
+    margin: 0 0 20px;
+}
+form#contactForm fieldset {
+    border: 0;
+    margin: 0 0 20px;
+    display: flex;
+    gap: 10px;
+}
+form#contactForm fieldset > label {
+    max-width: 80px;
+    flex: 0 0 100%;
+}
+
 
 /*---- footer section ----*/
 footer {
