--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -213,7 +213,7 @@ flex: 0 0 100%;
 }
 .left-rigth-section .left-image {
 padding: 2px;
-background-color: var(--accent-color);
+background-color: var(--light-blue);
 position: relative;
 }
 .left-rigth-section .left-image .about-tag {
