--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -318,9 +318,12 @@ flex: 0 0 100%;
 text-align: right;
 }
 .service-box > .service-icon {
-max-width: 80px;
-flex: 0 0 100%;
-background-color: var(--primary-color);
+    max-width: 80px;
+    flex: 0 0 100%;
+    background-color: #00D1F9;
+    height: 80px;
+    padding: 10px;
+    border-radius: 8px;
 }
 .single-col:last-child .service-box > .service-desc {
 text-align: left;
@@ -371,15 +374,36 @@ padding: 20px;
 
 /*---- testimonial ----*/
 section.testimonial {
-    padding: 80px 0;
+    padding: 80px 0 40px;
+    position: relative;
+}
+section.testimonial .section-header {
+    margin-bottom: 60px;
+}
+.testimonial .WidgetBackground__Content-sc-52f57cce-2.jGAyav > a {
+    display: none !important;
+}
+section.testimonial::before {
+    content: '';
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 50px;
+    background-color: var(--light-color);
+    bottom: 40px;
+    z-index: 2;
 }
 
 /*---- contact form ----*/
 section.contact {
-    padding: 80px 0;
+    padding: 40px 0 80px;
 }
 .form-wrapper {
-    margin-top: 40px;
+    max-width: 600px;
+    margin: 40px auto 0;
+    padding: 30px;
+    background-color: var(--muted-color);
+    border-radius: 16px;
 }
 form#contactForm fieldset {
     border: 0;
@@ -392,8 +416,24 @@ form#contactForm fieldset {
     gap: 10px;
 }
 form#contactForm fieldset > label {
-    max-width: 80px;
+    max-width: 90px;
     flex: 0 0 100%;
+}
+form#contactForm fieldset > .input {
+    max-width: calc(100% - 100px);
+    flex: 0 0 100%;
+    padding: 8px;
+    outline: none;
+}
+textarea.input {
+    min-height: 100px;
+}
+button.btn {
+    border: 0;
+    outline: none;
+    cursor: pointer;
+    margin: 0 auto;
+    display: block;
 }
 
 
