--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,8 @@
     background-color: var(--light-bg);
 }
 .hero-slider .slide-wrapper {
-    padding: 240px 0;
-    min-height: 800px; 
+    padding: 240px 0 100px;
+    min-height: calc(100vh - 100px); 
     display: flex;
     align-items: center;
 }
