--- a/css/style.css
+++ b/css/style.css
@@ -589,5 +589,37 @@ section.insta-gallery-section {
 .insta-gallery > * {
     max-width: calc(100% / 2 - 12px);
 }
+.process-wrapper > * {
+    padding: 80px 40px;
+}
+.advantages-row > *:nth-child(1) {
+    max-width: 100%;
+    order: 2;
+    padding: 40px;
+    border-radius: 0;
+}
+.advantages-row > *:nth-child(3) {
+    max-width: 100%;
+    order: 3;
+    padding: 40px;
+    border-radius: 0;
+}
+.advantages-row {
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.advantages-row > *:nth-child(2) {
+    width: 400px;
+    max-width: 100%;
+    position: static;
+    order: 1;
+    margin: 0 auto;
+    transform: translateX(0px);
+    background-color: var(--secondary);
+    padding: 40px;
+}
+.advantage-item {
+    margin-bottom: 40px;
+}
 
 }
